fixed intro alignment v2

--- a/styles.scss
+++ b/styles.scss
@@ -85,6 +85,7 @@ body {
   display: flex;
   margin-bottom: 60px;
   justify-content: center;
+  margin-right: 200px;
 
   .intro_title {
     align-self: center;
